--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>José Augusto - Portfólio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body {
       scroll-behavior: smooth;
@@ -360,3 +360,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
