Adicionado favicon e alterado projetos

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <img src="projbifatu.png" class="card-img-top" alt="Projeto Sistema de Vendas">
           <div class="card-body text-center">
             <h5 class="card-title">Dashoboard Faturamento</h5>
-            <p class="card-text">Dashboard de faturamento que coleta automaticamente o banco de dados TOTVS Protheus.</p>
+            <p class="card-text">Dashboard de faturamento que coleta automaticamente o banco de dados TOTVS Protheus. Feito no Power BI</p>
             <a href="#" class="btn btn-primary">Ver projeto</a>
           </div>
         </div>
@@ -148,7 +148,7 @@
           <img src="projimpetiqueta.png" class="card-img-top" alt="Projeto Dashboard Financeiro">
           <div class="card-body text-center">
             <h5 class="card-title">Software de Etiquetas</h5>
-            <p class="card-text">Software desenvolvido para gerar etiquetas com QRCode para organização do almoxarifado.</p>
+            <p class="card-text">Software desenvolvido para gerar etiquetas com QRCode para organização do almoxarifado. Feito com Python(Tkinter)</p>
             <a href="#" class="btn btn-primary">Ver projeto</a>
           </div>
         </div>
